[package]
name = "font_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
byteorder = "1.5.0"
clap = { version = "4.4.2", features = ["env", "derive"] }
dotenv = { version = "0.15.0", features = ["clap"] }
raylib = { version = "3.7" }
